--- a/microservicio-oauth-dev.properties
+++ b/microservicio-oauth-dev.properties
@@ -1,13 +1,13 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/siepdocpruebav2
+spring.datasource.url=jdbc:postgresql://localhost:5432/siepcsutomer
 spring.datasource.username=postgres
 spring.datasource.password=postgre14
-spring.sql.init.mode=always
+spring.sql.init.mode=always 
 logging.level.org.hibernate.SQL=debug
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.zipkin.base-url=http://localhost:9411/
-spring.rabbitmq.host=localhost
+#spring.zipkin.base-url=http://localhost:9411/
+#spring.rabbitmq.host=localhost
 authkeyts=secretSecret123456
 
 jwtsecret=secretSecret123456
