--- a/microservicio-scgh-dev.properties
+++ b/microservicio-scgh-dev.properties
@@ -1,8 +1,8 @@
 #spring.data.mongodb.uri=mongodb://root:siepdoc@35.239.95.187:27017/
-spring.data.mongodb.uri=mongodb://root:siepdoc@localhost:27017/
-spring.data.mongodb.host=localhost
-spring.data.mongodb.database=db_prueba_mongo
+#spring.data.mongodb.uri=mongodb://root:siepdoc@localhost:27017/
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.database=db_prueba_mongo
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.zipkin.base-url=http://localhost:9411/
-spring.rabbitmq.host=localhost
+#spring.zipkin.base-url=http://localhost:9411/
+#spring.rabbitmq.host=localhost 
