--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -1,16 +1,16 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/siepdocpruebav2
+spring.datasource.url=jdbc:postgresql://localhost:5432/siepcsutomer
 spring.datasource.username=postgres
 spring.datasource.password=postgre14
 spring.sql.init.mode=always
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=debug 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.zipkin.base-url=http://localhost:9411/
-spring.rabbitmq.host=localhost
+#spring.zipkin.base-url=http://localhost:9411/
+#spring.rabbitmq.host=localhost
 
 #minio.url=http://35.239.95.187:9000
-minio.url=http://localhost:9000
+#minio.url=http://localhost:9000
 
 authkeyts=secretSecret123456
 
