--- a/microservicio-oauth-dev.properties
+++ b/microservicio-oauth-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/siepcsutomer
+spring.datasource.url=jdbc:postgresql://localhost:5432/siepcustomer
 spring.datasource.username=postgres
 spring.datasource.password=postgre14
 spring.sql.init.mode=always 
