--- a/microservicio-oauth-dev.properties
+++ b/microservicio-oauth-dev.properties
@@ -19,3 +19,9 @@ expirationnewpasvorto=86400000
 jwtsecretrecoverypasvorto=secretSecret123456
 expirationrecoverypasvorto=600000
 keyrecoverypasvorto=recoverypasvortosiepdoc
+
+jwtsecretauthsiep=secretSecret123456
+expirationauthsiep=600000
+keyauthsiep=authSiep
+
+#la expiracion de los token se da en milisegundos
