--- a/microservicio-backend-dev.properties
+++ b/microservicio-backend-dev.properties
@@ -7,4 +7,6 @@ logging.level.org.hibernate.SQL=debug
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #spring.zipkin.base-url=http://localhost:9411/
-#spring.rabbitmq.host=localhost 
+spring.rabbitmq.host=localhost 
+
+minio.url=http://localhost:9000
