--- a/microservicio-oauth-dev.properties
+++ b/microservicio-oauth-dev.properties
@@ -11,7 +11,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 authkeyts=secretSecret123456
 
 jwtsecret=secretSecret123456
-expiration=300000
+expiration=7200000
 
 jwtsecretnewpasvorto=secretSecret123456
 expirationnewpasvorto=86400000
