--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -1,4 +1,10 @@
 server.port=80
+server.ssl.key-alias=selfsigned_localhost_sslserver
+server.ssl.key-password=opecolombia
+server.ssl.key-store=classpath:ssl-server.jks
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=PKCS12
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siepcustomer
 spring.datasource.username=postgres
@@ -16,3 +22,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 authkeyts=secretSecret123456
 
 keyrecoverypasvorto=recoverypasvortosiepdoc
+
