--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -1,6 +1,4 @@
 server.port=80
-
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siepcustomer
 spring.datasource.username=postgres
@@ -18,4 +16,11 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 authkeyts=secretSecret123456
 
 keyrecoverypasvorto=recoverypasvortosiepdoc
+
+server.ssl.key-alias=sslserver
+server.ssl.key-password=opecolombia
+server.ssl.key-store=classpath:ssl-server.jks
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-password=opecolombia
+server.ssl.key-store-type=JKS
 
