puerto http para redireccionar

--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -23,4 +23,5 @@ server.ssl.key-store=classpath:ssl-server.jks
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-password=opecolombia
 server.ssl.key-store-type=JKS
+http.port=80
 
