--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -1,4 +1,4 @@
-server.port=443
+server.port=80
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siepcustomer
 spring.datasource.username=postgres
@@ -17,11 +17,11 @@ authkeyts=secretSecret123456
 
 keyrecoverypasvorto=recoverypasvortosiepdoc
 
-server.ssl.key-alias=sslserver
-server.ssl.key-password=opecolombia
-server.ssl.key-store=classpath:ssl-server.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-password=opecolombia
-server.ssl.key-store-type=JKS
-http.port=80
+#server.ssl.key-alias=sslserver
+#server.ssl.key-password=opecolombia
+#server.ssl.key-store=classpath:ssl-server.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-password=opecolombia
+#server.ssl.key-store-type=JKS
+http.port=443
 
