--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -17,6 +17,7 @@ authkeyts=secretSecret123456
 
 keyrecoverypasvorto=recoverypasvortosiepdoc
 
+server.ssl.key-alias=
 #server.ssl.key-alias=sslserver
 #server.ssl.key-password=opecolombia
 #server.ssl.key-store=classpath:ssl-server.jks
