--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -17,12 +17,12 @@ authkeyts=secretSecret123456
 
 keyrecoverypasvorto=recoverypasvortosiepdoc
 
-http.is.ssl=true
-server.ssl.key-alias=sslserver
-server.ssl.key-password=opecolombia
-server.ssl.key-store=classpath:ssl-server.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-password=opecolombia
-server.ssl.key-store-type=JKS
+http.is.ssl=false
+#server.ssl.key-alias=sslserver
+#server.ssl.key-password=opecolombia
+#server.ssl.key-store=classpath:ssl-server.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-password=opecolombia
+#server.ssl.key-store-type=JKS
 http.port=443
 
