--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -13,8 +13,11 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #minio.url=http://35.239.95.187:9000
 #minio.url=http://localhost:9000
 
-authkeyts=secretSecret123456
+pathLogin=https://customer.siep-eis.com/images/img_login.svg
+nombreEntidad=eis.jpg
+pathEntidad=https://customer.siep-eis.com/images/${nombreEntidad}
 
+authkeyts=secretSecret123456
 keyrecoverypasvorto=recoverypasvortosiepdoc
 
 http.is.ssl=false
