--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -13,9 +13,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #minio.url=http://35.239.95.187:9000
 #minio.url=http://localhost:9000
 
-pathLogin=https://customer.siep-eis.com/images/img_login.svg
-nombreEntidad=eis.jpg
-pathEntidad=https://customer.siep-eis.com/images/${nombreEntidad}
+pathLogin=https://customer.siep-eis.com/imagenes/img_login.svg
+nombreEntidad=logo-entidad.jpg
+pathEntidad=https://customer.siep-eis.com/imagenes/logo-entidad.jpg
 
 authkeyts=secretSecret123456
 keyrecoverypasvorto=recoverypasvortosiepdoc
