--- a/microservicio-vaadin-dev.properties
+++ b/microservicio-vaadin-dev.properties
@@ -13,9 +13,10 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #minio.url=http://35.239.95.187:9000
 #minio.url=http://localhost:9000
 
-pathLogin=https://customer.siep-eis.com/imagenes/img_login.svg
+pathImgBienvenida=https://customer.siep-eis.com/imagenes/img_bienvenida.svg
 nombreEntidad=logo-entidad.jpg
 pathEntidad=https://customer.siep-eis.com/imagenes/logo-entidad.jpg
+pathIconUser=https://customer.siep-eis.com/imagenes/profile-user-2.png
 
 authkeyts=secretSecret123456
 keyrecoverypasvorto=recoverypasvortosiepdoc
