prueba logo-entidad

--- a/microservicio-envio-correo-dev.properties
+++ b/microservicio-envio-correo-dev.properties
@@ -1,3 +1,5 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #spring.zipkin.base-url=http://zipkin:9411/
 spring.rabbitmq.host=localhost
+
+path.logo-entidad=https://customer.siep-eis.com/imagenes/logo-entidad.jpg
