--- a/microservicio-envio-correo-dev.properties
+++ b/microservicio-envio-correo-dev.properties
@@ -3,3 +3,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.rabbitmq.host=localhost
 
 path.logo-entidad=https://customer.siep-eis.com/imagenes/logo-entidad.jpg
+path.avatar=https://customer.siep-eis.com/imagenes/default_user_avatar_16.png
