--- a/microservicio-backend-dev.properties
+++ b/microservicio-backend-dev.properties
@@ -10,3 +10,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.rabbitmq.host=localhost
 
 minio.url=http://localhost:9000
+
+codigo.entidad=890500529
+url.siepcustomer=https://customer.siep-eis.com/login
